cambio ruta con error

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "3era-preentrega",
+  "name": "Trabajo Final Albornoz",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
